fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,12 @@ label.nav-label::before{
   text-align: center;
 }
 
+.typeofdesign-title {
+  font-variant: small-caps;
+  color: #fff;
+  margin-bottom: 1em;
+}
+
 .portfolio-bg {
   background-color: #3a4556;
 }
@@ -347,7 +353,6 @@ label.nav-label::before{
   right: 0;
   margin-right: 1em;
 }
-
 
 img.scrolling-btns {
   position: absolute;
@@ -461,6 +466,7 @@ footer {
     padding: .5em;
     margin: 0;
   }
+
 }
 
 @media only screen and (min-width: 38em) {
